--- a/src/sections/footer/Footer.module.scss
+++ b/src/sections/footer/Footer.module.scss
@@ -1,6 +1,25 @@
-footer {
+.footer {
     background-color: #333;
     color: white;
-    text-align: center;
-    padding: 10px;
+    padding: 5px;
+
+    nav {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    nav ul {
+        list-style: none;
+        padding: 0;
+    }
+
+    nav ul li {
+        display: inline;
+        margin: 0 15px;
+    }
+
+    nav ul li a {
+        color: white;
+        text-decoration: none;
+    }
 }
