--- a/src/sections/hero/Hero.module.scss
+++ b/src/sections/hero/Hero.module.scss
@@ -1,27 +1,14 @@
-.hero {
-    background-color: #333;
-    color: #fff;
-    height: 70vh;
-    display: flex;
+section.hero {
+    background-color: var(--light-background);
+    color: var(--dark-background);
     align-items: center;
-    padding: 50px;
-    justify-content: center;
 
-    .mainContent {
-        display: flex;
-        flex-direction: column;
+    .title {
+        font-size: 2.5rem;
+        margin: 0;
+    }
 
-        h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
-
-        p {
-            font-size: 1.2rem;
-        }
-
-        .cta {
-            align-self: flex-end;
-        }
+    .cta {
+        align-self: flex-end;
     }
 }
