--- a/src/sections/about/About.module.scss
+++ b/src/sections/about/About.module.scss
@@ -1,4 +1,4 @@
-section.about {
-    background-color: var(--dark-background);
-    color: var(--light-background);
+.about {
+    background-color: var(--dark);
+    color: var(--white);
 }
