--- a/src/sections/hero/Hero.module.scss
+++ b/src/sections/hero/Hero.module.scss
@@ -1,6 +1,6 @@
-section.hero {
-    background-color: var(--light-background);
-    color: var(--dark-background);
+.hero {
+    background-color: var(--light);
+    color: var(--dark);
     align-items: center;
 
     .title {
