--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -6,18 +6,18 @@
     transition: background-color 0.3s ease;
 
     &--primary {
-        background-color: var(--dark-background);
-        color: white;
+        background-color: var(--dark);
+        color: var(--white);
     }
 
     &--secondary {
-        background-color: var(--color-secondary);
-        color: white;
+        background-color: var(--blue);
+        color: var(--white);
     }
 
     &--danger {
-        background-color: var(--color-danger);
-        color: white;
+        background-color: var(--orange);
+        color: var(--dark);
     }
 
     &:hover {
